# eswc-2021

./: README.md
Edgent/: pom.xml
Edgent/topology/: pom.xml
Edgent/topology/src/main/java/org/apache/edgent/samples/topology/: AbruptAnomalySensor.java  CSVFileExporter.java  CSVReader.java  GradualAnomalySensor.java  Main.java  NoAnomalySensor.java  SerieAnomalySensor.java  SomeAnomalySensor.java  TCPServerThread.java  TCPThread.java
SuccinctEdge/: CMakeLists.txt  DataTypeStore.cpp  DataTypeStore.hpp  DataWindowUtil.hpp  Makefile  RDFStorage.cpp  RDFStorage.hpp  ShowResults.hpp  TCPReceiver.cpp  TCPReceiver.hpp  main.cpp
SuccinctEdge/test_data/: sensor_test.nt
SuccinctEdge/test_query/: sensor_test.sparql
